# tribal-wars-bot

./: .gitignore  README.md  bot.py  check_data.py  costs.json  data_types.py  deputy.py  get_required_resources.ipynb  main.py  pyproject.toml  scavegning.py  scheduler.py  village_caretaker.py
actions/: __init__.py  action_input.py  base.py  build.py  farm.py  prevent.py  recruit.py  scavegne.py  scavenge.py  train.py
data/: build.csv  building_costs.json  costs.json  prevent.json  recruit.json  recruit_to_prevent.json  scavegne.json  scavenge copy.json  scavenge.json
tactics/: __init__.py  farm.py  prevent.py  recruit.py  scavenge.py  train.py
villages_commissions/354|599/: build.csv  build_to_prevent.json  recruit.json  scavenge.json
villages_commissions/355|604/: build.csv  build_to_prevent.json  farm.json  scavenge.json  train.json
