[tool.poetry]
name = "deputy"
version = "0.1.0"
description = ""
authors = ["Stanisław Straburzyński <sstraburzynski@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^4.1.2"
poetry-dotenv-plugin = "^0.1.0-alpha.2"
python-dotenv = "^0.19.2"
numpy = "^1.22.3"
requests = "^2.27.1"
flake8 = "^4.0.1"
regex = "^2022.3.2"
webdriver-manager = "^3.5.3"
pause = "^0.3"
ipykernel = "^6.9.1"
furl = "^2.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
